--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
     - name: Build the book
       shell: bash -l {0}
       run: |
-        jupyter-book build docs
+        rm -rf docs/_build
+        jupyter-book build docs/
+
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
