--- a/environment.yml
+++ b/environment.yml
@@ -2,10 +2,39 @@ name: jupyter-env
 channels:
  - conda-forge
 dependencies:
- - matplotlib
- - numpy
- - scipy
- - pandas
- - sympy
-# dependencies for building book
- - jupyter-book
+ docutils==0.18.1
+ exceptiongroup==1.2.0
+ executing==2.0.1
+ ghp-import==2.1.0
+ jupyter-book==0.15.1
+ jupyter-cache==0.6.1
+ jupyter_client==8.6.0
+ jupyter_core==5.7.1
+ matplotlib==3.8.2
+ matplotlib-inline==0.1.6
+ myst-nb==0.17.2
+ myst-parser==0.18.1
+ numpy==1.26.4
+ pydata-sphinx-theme==0.15.2
+ pymdown-extensions==10.7
+ Sphinx==5.0.2
+ sphinx-book-theme==1.1.0
+ sphinx-comments==0.0.3
+ sphinx-copybutton==0.5.2
+ sphinx-jupyterbook-latex==0.5.2
+ sphinx-multitoc-numbering==0.1.3
+ sphinx-sitemap==2.5.1
+ sphinx-thebe==0.2.1
+ sphinx-togglebutton==0.3.2
+ sphinx_design==0.3.0
+ sphinx_external_toc==0.3.1
+ sphinx_inline_tabs==2023.4.21
+ sphinxcontrib-applehelp==1.0.8
+ sphinxcontrib-bibtex==2.5.0
+ sphinxcontrib-devhelp==1.0.6
+ sphinxcontrib-htmlhelp==2.0.5
+ sphinxcontrib-jsmath==1.0.1
+ sphinxcontrib-qthelp==1.0.7
+ sphinxcontrib-serializinghtml==1.1.10
+ typing_extensions==4.9.0
+ urllib3==2.2.0
