--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       shell: bash -l {0}
       run: |
         rm -rf docs/_build
+        python -m pip install --upgrade pip
+        pip install --force-reinstall -r requirements.txt
         jupyter-book build docs/
 
 
