--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: Data Structures and Algorithms
 author: Naresh Kumar Devulapally
-logo: assets/website/logo-draft.png
+logo: assets/website/logo-final.gif
 
 # Repository Information
 repository:
